force-app/main/default/objects/AppraisalItem/fields/AF_InspectionDone__c.field-meta.xml
<CustomField>
    <fullName>AF_InspectionDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection Done?</label>
    <type>Checkbox</type>
</CustomField>