force-app/main/default/objects/AppraisalItem/fields/AF_InspectionNotes__c.field-meta.xml
<CustomField>
    <fullName>AF_InspectionNotes__c</fullName>
    <label>Inspection Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>