force-app/main/default/objects/AppraisalItem/fields/AF_Source__c.field-meta.xml
<CustomField>
    <fullName>AF_Source__c</fullName>
    <description>Data source of this appraisal item capture. No std AC field covers this concept — genuine custom gap per DAT-018 mapping.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Third-Party</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>